test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_function_call_no_args.draco
proc main() void : a := func(); corp;

