test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_function_no_return_value.draco
proc main() int : a := 1; corp;

